.argocd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  namespace: anitection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
        - name: anitection-cms
          image: yumekiti/anitection-cms:47a02d9
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: cms-persistent-storage
              mountPath: /app/public/uploads
      volumes:
        - name: cms-persistent-storage
          persistentVolumeClaim:
            claimName: cms-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: anitection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: anitection-db
          image: postgres:16.0-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: anitection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - name: anitection-bff
          image: yumekiti/anitection-bff:47a02d9
          ports:
            - containerPort: 8080
